# corries

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  justfile  taskfile.yml
.github/workflows/: build-test.yml
benches/: bench.rs
example/: bench.rs
examples/: accretiondisk.rs  bench.rs  template.rs
src/: boundaryconditions.rs  components.rs  config.rs  directions.rs  errorhandling.rs  initfuncs.rs  initialconditions.rs  lib.rs  macros.rs  mesh.rs  physics.rs  physics_old.rs  rhs.rs  solver.rs  state.rs  time.rs  timeintegration.rs  units.rs  writer.rs
src/boundaryconditions/: custom.rs
src/config/: meshconfig.rs  numericsconfig.rs  outputconfig.rs  physicsconfig.rs
src/config/numericsconfig/: numfluxconfig.rs  timeintegrationconfig.rs
src/errorhandling/: checks.rs
src/initialconditions/: noh.rs
src/physics/: euler1disot.rs  systems.rs  variables.rs
src/physics/systems/: euler1dadiabatic.rs  euler1disot.rs  euler2disot.rs
src/physics_old/: systems.rs
src/physics_old/systems/: euler2disot.rs
src/rhs/: numflux.rs
src/rhs/numflux/: hll.rs  kt.rs
src/state/: physics.rs  systems.rs  variables.rs
src/state/systems/: euler1dadiabatic.rs  euler1disot.rs
src/time/: rkf.rs  timestep.rs
src/time/rkf/: butchertableau.rs
src/timeintegration/: rkf.rs  timestep.rs
src/timeintegration/rkf/: butchertableau.rs
src/writer/: data.rs  output.rs
tests/: noh.rs  sod.rs
