# Copyright (c) 2022
# Author: Tommy Breslein (github.com/tbreslein)
# License: MIT

[package]
name = "corries"
version = "0.0.1-alpha"
edition = "2021"
authors = [ "tbreslein <github.com/tbreslein>" ]
description = "Library for simulating 1D-hydrodynamics using Riemann solvers"
repository = "https://github.com/tbreslein/corries/"
license = "MIT"
keywords = ["science", "physics", "hydrodynamics", "numerics"]
categories = ["science", "mathematics"]
# deactivates auto-discovery in ./tests, so that I can add the integration tests manually
# autotests = false

# [[example]]
# name = "accretiondisk"
#
# [[test]]
# name = "noh_isot_cartesian"
# path = "tests/noh.rs"

# [[test]]
# name = "sod"
# path = "tests/sod.rs"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
ndarray = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[dev-dependencies]
proptest = { version = "1" }
approx = { version = "0.5" }
